test/invalid/branch_no_return.py
def main() -> int:
    x = 10
    if x > 5:
        return x + 2
    else:
        y = 1
